--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "animate.css": "^4.1.1",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "echarts": "^5.3.3",
     "element-ui": "^2.15.6",
     "qs": "^6.10.5",
     "video.js": "^7.19.2",
     "vue": "^2.6.14",
     "vue-calendar-component": "^2.8.2",
     "vue-core-video-player": "^0.2.0",
+    "vue-echarts": "^6.1.0",
     "vue-router": "^3.5.3",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.6.2"
@@ -27,6 +29,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/composition-api": "^1.6.3",
     "babel-plugin-component": "^1.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
